[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/Enemies.png" type="Texture" id=1]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/MedusaHead.gd" type="Script" id=3]
[ext_resource path="res://enemies/Enemy.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 176, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 8.0

[node name="MedusaHead" type="AnimatedSprite" groups=["AffectedByClock", "AffectedByRosary"]]
frames = SubResource( 7 )
playing = true
script = ExtResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 4 )

[node name="KillTimer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.3, 0.3 )

[node name="Enemy" type="Node" parent="."]
script = ExtResource( 4 )
enemyName = "Medusa Head"
damage = 2
points = 300
hitbox = NodePath("../Hitbox")
drop = "enemy"

[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
